--- a/pages/16790.html
+++ b/pages/16790.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
-  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+
+
+  <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534279987" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -482,7 +483,17 @@ margin-left: 0em;
 
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> geometry of a <a class='existingWikiWord' href='/nlab/show/black+hole'>black hole</a> or <a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a> close to the <a class='existingWikiWord' href='/nlab/show/horizon'>horizon</a>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> geometry of a <a class='existingWikiWord' href='/nlab/show/black+hole'>black hole</a> or <a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a> close to the <a class='existingWikiWord' href='/nlab/show/horizon'>horizon</a> is called its <em>near horizon geometry</em>.</p>
+
+<p>For <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/M-branes'>M-branes</a> (<a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a>) of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>p+1</annotation></semantics></math> that preserve some <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>, the near horizon geometry is always a <a class='existingWikiWord' href='/nlab/show/Cartesian+product'>Cartesian product</a> of an <a class='existingWikiWord' href='/nlab/show/anti-de+Sitter+spacetime'>anti-de Sitter spacetime</a> <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow><annotation encoding='application/x-tex'>AdS_{p+2}</annotation></semantics></math> with a <a class='existingWikiWord' href='/nlab/show/compact+topological+space'>compact</a> <a class='existingWikiWord' href='/nlab/show/Einstein+manifold'>Einstein manifold</a> <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>X</mi> <mrow><mn>11</mn><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>X_{11-(p+2)}</annotation></semantics></math>;</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ads</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo>×</mo><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub><mspace width='thinmathspace'></mspace><mo>;</mo></mrow><annotation encoding='application/x-tex'>
+  Ads_{p+2} \times X_{d-(p+2)}
+  \,;
+
+</annotation></semantics></math></div>
+<p>while for <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D-branes'>D-branes</a> and <a class='existingWikiWord' href='/nlab/show/NS5-branes'>NS5-branes</a> in <a class='existingWikiWord' href='/nlab/show/type+II+supergravity'>type II supergravity</a> the near horizon geometry is <a class='existingWikiWord' href='/nlab/show/conformal+transformation'>conformal</a> to a geometry of this form <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo>×</mo><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>AdS_{p+2} \times X_{d-(p+2)}</annotation></semantics></math> (see <a href='#AFFHS98'>AFFHS 98, section 2</a>).</p>
+
+<p>In contrast, the “far-horizon geometry” of all those <a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> whose near horizon geometry is <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo>×</mo><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>AdS_{p+2} \times X_{d-(p+2)}</annotation></semantics></math> (i.e. actual <a class='existingWikiWord' href='/nlab/show/anti-de+Sitter+spacetime'>anti-de Sitter spacetime</a> without conformal factor) is of the form <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>×</mo><mi>C</mi><mo stretchy='false'>(</mo><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p+1} \times C(X_{d-(p+2)})</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p+1}</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Minkowski+spacetime'>Minkowski spacetime</a> and <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>C(X_{d-(p+2)})</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/metric+cone'>metric cone</a> over <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>X</mi> <mrow><mi>d</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>X_{d-(p+2)}</annotation></semantics></math> (see <a href='#AFFHS98'>AFFHS 98, section 3</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -502,13 +513,13 @@ margin-left: 0em;
 <li>Hari K. Kunduri, James Lucietti, <em>Classification of Near-Horizon Geometries of Extremal Black Holes</em> (<a href='http://relativity.livingreviews.org/Articles/lrr-2013-8/title.html'>web</a>)</li>
 </ul>
 
-<p>That the near horizon geometry of the <a class='existingWikiWord' href='/nlab/show/extremal+black+hole'>extremal</a> <a class='existingWikiWord' href='/nlab/show/Reissner-Nordstr%C3%B6m+black+hole'>Reissner-Nordström black hole</a> in <math class='maruku-mathml' display='inline' id='mathml_12f508c0d6af038678f8f7b4e8f1065e887683cd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}=2</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/4d+supergravity'>4d supergravity</a> in <math class='maruku-mathml' display='inline' id='mathml_12f508c0d6af038678f8f7b4e8f1065e887683cd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>2</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>AdS_2 \times S^2</annotation></semantics></math> was observed in</p>
+<p>That the near horizon geometry of the <a class='existingWikiWord' href='/nlab/show/extremal+black+hole'>extremal</a> <a class='existingWikiWord' href='/nlab/show/Reissner-Nordstr%C3%B6m+black+hole'>Reissner-Nordström black hole</a> in <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}=2</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/4d+supergravity'>4d supergravity</a> in <math class='maruku-mathml' display='inline' id='mathml_84d6263eebd9cf235f55e0492f20e89667577e38_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>2</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>AdS_2 \times S^2</annotation></semantics></math> was observed in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, in F. del Aguila, <a class='existingWikiWord' href='/nlab/show/J.+de+Azcarraga'>J. de Azcarraga</a>], <a class='existingWikiWord' href='/nlab/show/Luis+Ibanez'>Luis Ibanez</a> (eds.) <em>Supersymmetry, Supergravity and Related Topics</em></li>
 </ul>
 
-<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some <a class='existingWikiWord' href='/nlab/show/compact+space'>compact space</a> is apparently due to</p>
+<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is (conformal to) <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some <a class='existingWikiWord' href='/nlab/show/compact+space'>compact space</a> is apparently due to</p>
 
 <ul>
 <li id='GibbonsTownsend93'>
@@ -543,6 +554,12 @@ margin-left: 0em;
 <p>A decent account is in</p>
 
 <ul>
+<li id='AFFHS98'><a class='existingWikiWord' href='/nlab/show/Bobby+Acharya'>Bobby Acharya</a>, <a class='existingWikiWord' href='/nlab/show/Jose+Figueroa-O%27Farrill'>Jose Figueroa-O&#39;Farrill</a>, <a class='existingWikiWord' href='/nlab/show/Chris+Hull'>Chris Hull</a>, B. Spence, <em>Branes at conical singularities and holography</em>, Adv. Theor.Math. Phys.2:1249-1286, 1999 (<a href='https://arxiv.org/abs/hep-th/9808014'>arXiv:hep-th/9808014</a>)</li>
+</ul>
+
+<p>reviewed in</p>
+
+<ul>
 <li id='FigOFar98'><a class='existingWikiWord' href='/nlab/show/Jose+Figueroa-O%27Farrill'>Jose Figueroa-O&#39;Farrill</a>, <em>Near-horizon geometries of supersymmetric branes</em>, talk at <a href='http://inspirehep.net/record/971430/'>SUSY 98</a> (<a href='https://arxiv.org/abs/hep-th/9807149'>arXiv:hep-th/9807149</a>, <a href='http://www.maths.ed.ac.uk/~jmf/CV/Seminars/SUSY98.pdf'>talk slides</a>)</li>
 </ul>
 
@@ -561,14 +578,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August  3, 2018 at 12:23:49.
+  Last revised on August 15, 2018 at 00:56:20.
   See the <a href="https://ncatlab.org/nlab/history/near-horizon geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/near-horizon geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
