--- a/pages/16172.html
+++ b/pages/16172.html
@@ -392,7 +392,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#examples'>Examples</a></li>
 <ul>
-<li><a href='#ExamplesG2Manifolds'><math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</a></li>
+<li><a href='#ExamplesG2Manifolds'><math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -401,13 +401,13 @@ margin-left: 0em;
 
 <h2 id='idea'>Idea</h2>
 
-<p>In (<a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+geometry'>pseudo-</a>)<a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a>, a <em>cone</em> is a part of a (pseudo-)<a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> where the <a class='existingWikiWord' href='/nlab/show/metric+tensor'>metric tensor</a> is locally of the form <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><msup><mi>s</mi> <mn>2</mn></msup><mo>=</mo><mi>d</mi><msup><mi>r</mi> <mn>2</mn></msup><mo>+</mo><msup><mi>r</mi> <mn>2</mn></msup><mi>d</mi><msubsup><mi>s</mi> <mn>1</mn> <mn>2</mn></msubsup></mrow><annotation encoding='application/x-tex'>d s^2 = d r^2 + r^2 d s^2_1</annotation></semantics></math>. The point that would correspond to <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>r = 0</annotation></semantics></math> is the “conical singularity”.</p>
+<p>In (<a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+geometry'>pseudo-</a>)<a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a>, a <em>cone</em> is a part of a (pseudo-)<a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a> where the <a class='existingWikiWord' href='/nlab/show/metric+tensor'>metric tensor</a> is locally of the form <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><msup><mi>s</mi> <mn>2</mn></msup><mo>=</mo><mi>d</mi><msup><mi>r</mi> <mn>2</mn></msup><mo>+</mo><msup><mi>r</mi> <mn>2</mn></msup><mi>d</mi><msubsup><mi>s</mi> <mn>1</mn> <mn>2</mn></msubsup></mrow><annotation encoding='application/x-tex'>d s^2 = d r^2 + r^2 d s^2_1</annotation></semantics></math>. The point that would correspond to <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>r = 0</annotation></semantics></math> is the “conical singularity”.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='ExamplesG2Manifolds'><math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</h3>
+<h3 id='ExamplesG2Manifolds'><math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</h3>
 
-<p>Three examples of cones that <a class='existingWikiWord' href='/nlab/show/simply-connected'>simply-connected</a> <a class='existingWikiWord' href='/nlab/show/G2-manifolds'>G2-manifolds</a> seem to be known: cones on <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi><msup><mi>P</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}P^3</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(3)/U(1)\times U(1)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup><mo>×</mo><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>S^3 \times S^3</annotation></semantics></math>. (<a href='#AtiyahWitten01'>Atiyah-Witten 01</a>)</p>
+<p>Three examples of cones that <a class='existingWikiWord' href='/nlab/show/simply-connected'>simply-connected</a> <a class='existingWikiWord' href='/nlab/show/G2-manifolds'>G2-manifolds</a> seem to be known: cones on <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi><msup><mi>P</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}P^3</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>3</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>×</mo><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(3)/U(1)\times U(1)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup><mo>×</mo><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>S^3 \times S^3</annotation></semantics></math>. (<a href='#AtiyahWitten01'>Atiyah-Witten 01</a>)</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -431,7 +431,7 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<p>Discussion of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> <a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a>-solutions at conical singularities includes the following (see also at <em><a class='existingWikiWord' href='/nlab/show/near+horizon+geometry'>near horizon geometry</a></em>)</p>
+<p>Discussion of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> <a class='existingWikiWord' href='/nlab/show/black+brane'>black brane</a>-solutions at conical singularities (<a class='existingWikiWord' href='/nlab/show/cone+branes'>cone branes</a>) includes the following (see also at <em><a class='existingWikiWord' href='/nlab/show/far-horizon+geometry'>far-horizon geometry</a></em>)</p>
 
 <ul>
 <li>
@@ -443,14 +443,14 @@ margin-left: 0em;
 </li>
 
 <li id='AtiyahWitten01'>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+Atiyah'>Michael Atiyah</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a> <em><math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-Theory dynamics on a manifold of <math class='maruku-mathml' display='inline' id='mathml_2f04e5d5ec3f12156bbef1b3450f5d6450b5e3f0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-holonomy</em>, Adv. Theor. Math. Phys. 6 (2001) (<a href='http://arxiv.org/abs/hep-th/0107177'>arXiv:hep-th/0107177</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+Atiyah'>Michael Atiyah</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a> <em><math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-Theory dynamics on a manifold of <math class='maruku-mathml' display='inline' id='mathml_fd888459e04dbad400c29f93c1d48bcba89bd7cb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-holonomy</em>, Adv. Theor. Math. Phys. 6 (2001) (<a href='http://arxiv.org/abs/hep-th/0107177'>arXiv:hep-th/0107177</a>)</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 15, 2018 at 00:53:57.
+  Last revised on August 15, 2018 at 01:20:17.
   See the <a href="https://ncatlab.org/nlab/history/cone (Riemannian geometry)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
