--- a/pages/1788.html
+++ b/pages/1788.html
@@ -11,7 +11,7 @@
 
 
   <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/mathematics.css?1534103919" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
@@ -306,21 +306,40 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><a class='existingWikiWord' href='/nlab/show/C%2A-algebra'>C*-algebra</a></p>
+      <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#some_preliminaries'>Some preliminaries</a></li>
+<li><a href='#some_actual_content'>Some actual content</a></li>
+</ul>
+</div>
 
-<p>Test</p>
+<h2 id='some_preliminaries'>Some preliminaries</h2>
+<div class='num_defn'>
+<h6>Definition</h6>
+Hello
+</div>
+<h2 id='some_actual_content'>Some actual content</h2>
+<div class='num_theorem' id='SomeImportantTheorem'>
+<h6>Theorem</h6>
+Bonjour
+</div><div class='num_defn'>
+<h6>Definition</h6>
+Some other definition
+</div>
+<p>Theorem <a class='maruku-ref' href='#SomeImportantTheorem'></a> is quite significant.</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 13, 2018 at 17:59:03.
+  Last revised on August 15, 2018 at 15:58:54.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1645" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1645 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1646" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1646 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
