--- a/pages/19600.html
+++ b/pages/19600.html
@@ -360,7 +360,7 @@ margin-left: 0em;
 <p>… when we talk of divers spaces, we mean only parts of one and the same space.</p>
 </blockquote>
 
-<p>In the essay under consideration Russell proposes an alternative version of Kants argument that continues the notion of a space, a “form of externality”, that is given a priori. About this space three properties can be deduced a priori (constant <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a>, <a class='existingWikiWord' href='/nlab/show/finite+number'>finite</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimensionality</a>, and existence of straight <a class='existingWikiWord' href='/nlab/show/lines'>lines</a>). At the end of his essay Russel recapulates:</p>
+<p>In the essay under consideration Russell proposes an alternative version of Kants argument that continues the idea of a space given a priori, but only as a “form of externality” and not a concrete perception of a space. About this space three properties can be deduced a priori (constant <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a>, <a class='existingWikiWord' href='/nlab/show/finite+number'>finite</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimensionality</a>, and existence of straight <a class='existingWikiWord' href='/nlab/show/lines'>lines</a>). At the end of his essay Russel recapulates:</p>
 
 <blockquote>
 <p>…</p>
@@ -397,14 +397,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 15, 2018 at 17:16:17.
+  Last revised on August 16, 2018 at 16:14:45.
   See the <a href="https://ncatlab.org/nlab/history/An Essay on the Foundations of Geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/An+Essay+on+the+Foundations+of+Geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/An+Essay+on+the+Foundations+of+Geometry/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/An+Essay+on+the+Foundations+of+Geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/An+Essay+on+the+Foundations+of+Geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/An+Essay+on+the+Foundations+of+Geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/An+Essay+on+the+Foundations+of+Geometry/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/An+Essay+on+the+Foundations+of+Geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/An+Essay+on+the+Foundations+of+Geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/An Essay on the Foundations of Geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
