--- a/pages/19602.html
+++ b/pages/19602.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Rajesh Gopakumar in nLab
+      Stefan Fredenhagen in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Rajesh Gopakumar
+      Stefan Fredenhagen
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8858/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,45 +309,35 @@ margin-left: 0em;
 
 <div id="revision">
       <ul>
-<li><a href='https://en.wikipedia.org/wiki/Rajesh_Gopakumar'>Wikipedia entry</a></li>
+<li><a href='https://homepage.univie.ac.at/stefan.fredenhagen/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_160ada6e5381d6b407e64a3687dc2c895c9c65fb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_dfce980a63a0771291890bff542616c74714384b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/topological+string'>topological string</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gopakumar-Vafa+invariant'>Gopakumar-Vafa invariant</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+spin+gauge+theory'>higher spin gauge theory</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/higher+spin+gauge+theory'>higher spin gauge theory</a></li>
 </ul>
 <div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 17, 2018 at 05:28:10.
-  See the <a href="https://ncatlab.org/nlab/history/Rajesh Gopakumar" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on August 17, 2018 at 05:22:32.
+  See the <a href="https://ncatlab.org/nlab/history/Stefan Fredenhagen" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Rajesh+Gopakumar" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rajesh+Gopakumar/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Rajesh+Gopakumar" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rajesh+Gopakumar" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Rajesh Gopakumar/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Stefan+Fredenhagen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Stefan Fredenhagen/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Rajesh+Gopakumar" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Stefan+Fredenhagen" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Rajesh+Gopakumar" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Stefan+Fredenhagen" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Rajesh+Gopakumar" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Stefan+Fredenhagen" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
