--- a/pages/19603.html
+++ b/pages/19603.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8862/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8862/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -699,7 +699,7 @@ margin-left: 0em;
 
 <li>Localization in Homotopy Type Theory, arXiv:1807.04155</li>
 
-<li>The James construction and <math class='maruku-mathml' display='inline' id='mathml_ce7dd4a63d2c709a4ed59d4317d1568b1ddb9a6a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory, arXiv: 1610.01134</li>
+<li>The James construction and <math class='maruku-mathml' display='inline' id='mathml_7f029a607f5f9f71d1cda2d4b850f972518ab24d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory, arXiv: 1610.01134</li>
 
 <li>The Cayley-Dickson Construction in Homotopy Type Theory, arXiv:1610.01134</li>
 
@@ -725,7 +725,7 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em>Cartan Geometry in Modal Homotopy Type Theory</em>, arXiv:1806.05966</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, Cohesive Covering Theory (Extended Abstract), (<a href='pdf'>https://hott-uf.github.io/2018/abstracts/HoTTUF18_paper_15.pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em>Cohesive Covering Theory (Extended Abstract)</em>, (<a href='https://hott-uf.github.io/2018/abstracts/HoTTUF18\_paper\_15.pdf'>pdf</a>)</li>
 </ul>
 
 <p>See also <a class='existingWikiWord' href='/schreiber/show/Some+thoughts+on+the+future+of+modal+homotopy+type+theory'>Some thoughts on the future of modal homotopy type theory</a>.</p>
@@ -733,14 +733,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on August 18, 2018 at 23:38:24.
+  Last revised on August 19, 2018 at 00:28:41.
   See the <a href="https://ncatlab.org/nlab/history/mathematics presented in homotopy type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mathematics+presented+in+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/mathematics+presented+in+homotopy+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematics+presented+in+homotopy+type+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/mathematics+presented+in+homotopy+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematics+presented+in+homotopy+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mathematics presented in homotopy type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
