--- a/pages/18181.html
+++ b/pages/18181.html
@@ -372,7 +372,7 @@ margin-left: 0em;
 
 <h5 id='of_space'>Of Space</h5>
 
-<p>For Kant space is not a concept but an intuition, more precisely an intuition, “which serves for the foundation of all external intuitions”. Kant develops this view in the following steps (B38-40)</p>
+<p>For Kant space is not a concept but an intuition, more precisely an intuition, “which serves for the foundation of all external intuitions”. Kant develops this view in the following steps (A24-25/B38-40)</p>
 
 <blockquote>
 <ol>
@@ -390,9 +390,9 @@ margin-left: 0em;
 </ol>
 </blockquote>
 
-<p>The intuition (in the ordinary sense) Kant has concerning space is similar to a number theorist who considers “the” natural numbers as object of her studies, though certainly she certainly has limitations in specifying what she means. Indeed, common way to do so have limitation: for instance, one can not uniquely determine the natural numbers by a list of axioms, as <a class='existingWikiWord' href='/nlab/show/incompleteness+theorem'>Gödel&#39;s fist incompleteness theorem</a> demonstrates, nor is it satisfying to describe the natural numbers by a concrete model, because there are several ways to do so.</p>
+<p>The intuition (in the ordinary sense) Kant has concerning space is similar to a number theorist who considers “the” <a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a> as the object of her studies, though certainly she certainly has limitations in specifying what she means. Indeed, common way to do so have limitation: for instance, one can not uniquely determine the natural numbers by a list of axioms, as <a class='existingWikiWord' href='/nlab/show/incompleteness+theorem'>Gödel&#39;s fist incompleteness theorem</a> demonstrates, nor is it satisfying to describe the natural numbers by a concrete model, because there are several ways to do so.</p>
 
-<p>Due to his intuition that there is “one” space, Kant discards the first two out of the three possibilities he discusses. Since Kant this intuition has been mostly dropped by geometers in favor of the first introducing pioneering concepts like <a class='existingWikiWord' href='/nlab/show/On+the+hypotheses+which+underlie+geometry'>Riemannian manifolds in 1854</a>. In his very early work <a class='existingWikiWord' href='/nlab/show/Bertrand+Russell'>Bertrand Russell</a> tried to adapt Kant’s work to this new view (see <a class='existingWikiWord' href='/nlab/show/An+Essay+on+the+Foundations+of+Geometry'>An Essay on the Foundations of Geometry</a>).</p>
+<p>Due to his intuition that there is “one” space, Kant discards the first two out of the three possibilities he discusses. Since Kant this intuition has been dropped mostly by geometers in favor of the first introducing pioneering concepts like <a class='existingWikiWord' href='/nlab/show/On+the+hypotheses+which+underlie+geometry'>Riemannian manifolds in 1854</a>. In his very early work <a class='existingWikiWord' href='/nlab/show/Bertrand+Russell'>Bertrand Russell</a> tried to adapt Kant’s work to this new view (see <a class='existingWikiWord' href='/nlab/show/An+Essay+on+the+Foundations+of+Geometry'>An Essay on the Foundations of Geometry</a>).</p>
 
 <p>Actually, all three possibilities discussed by Kant appear in modern mathematics:</p>
 
@@ -406,13 +406,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>“Space is essentially one, and multiplicity in it, consequently the general notion of spaces, of this or that space, depends solely upon limitations.” (German: Er [Der Raum] ) A situation like this is found if any space in a geometrical theory can be considered as a subspace of one fix space. Good examples of such situations are given by <a class='existingWikiWord' href='/nlab/show/descriptive+set+theory'>descriptive set theory</a> that can be understood as the study of subsets of the real line.</p>
+<p>“Space is essentially one, and multiplicity in it, consequently the general notion of spaces, of this or that space, depends solely upon limitations.” (German: “Er [Der Raum] ist wesentlich einig, das Mannigfaltige in ihm, mithin auch der allgemeine Begriff von Räumen überhaupt beruht lediglich auf Einschränkungen.”) A situation like this is found if any space in a geometrical theory can be considered as a subspace of one fix space. Good examples of such situations are given by <a class='existingWikiWord' href='/nlab/show/descriptive+set+theory'>descriptive set theory</a> that can be understood as the study of subsets of the real line.</p>
 </li>
 </ol>
 
 <h5 id='of_time'>Of Time</h5>
 
 <h4 id='transcendental_logic'>Transcendental Logic</h4>
+
+<p>Achourioti and van Lambalgen (June and November 2011) offered a formalization of Kant’s logic in terms of <a class='existingWikiWord' href='/nlab/show/geometric+logic'>geometric logic</a>.</p>
 
 <h3 id='transcendental_doctrine_of_methods'>Transcendental Doctrine of Methods</h3>
 
@@ -458,13 +460,21 @@ margin-left: 0em;
 <li>
 <p><a href='http://www.gutenberg.org/files/4280/4280-h/4280-h.htm'>english translation</a> by <a href='https://en.wikipedia.org/wiki/John_Meiklejohn'>J. M. D. Meiklejohn</a></p>
 </li>
+
+<li>
+<p>Achourioti and van Lambalgen June 2011, <em>A formalization of Kant’s transcendental logic</em>.</p>
+</li>
+
+<li>
+<p>Achourioti and van Lambalgen November 2011 (Video), <a href='https://www.youtube.com/watch?v=gPAZcxAGRVs'><em>The Completeness of Kant’s Table of Judgments &amp; Consequences for Philosophy of Mathematics</em></a>.</p>
+</li>
 </ul>
 <div class='property'>category: <a class='category_link' href='/nlab/all_pages/reference'>reference</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 19, 2018 at 17:59:58.
+  Last revised on August 19, 2018 at 18:41:51.
   See the <a href="https://ncatlab.org/nlab/history/Critique of Pure Reason" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
