--- a/pages/19578.html
+++ b/pages/19578.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
-  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+
+
+  <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -762,16 +763,34 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>A different but similar approach is the GRS model due to</p>
+
+<ul>
+<li id='GRS00'>
+<p>Ruth Gregory, Valery A. Rubakov, Sergei M. Sibiryakov, <em>Opening up extra dimensions at ultra-large scales</em>, Phys.Rev.Lett. 84 (2000) 5928-5931 (<a href='https://arxiv.org/abs/hep-th/0002072'>arXiv:hep-th/0002072</a>)</p>
+</li>
+
+<li>
+<p>Csaba Csaki, Joshua Erlich, Timothy J. Hollowood, <em>Quasi-Localization of Gravity by Resonant Modes</em>, Phys. Rev. Lett.84:5932-5935, 2000 (<a href='https://arxiv.org/abs/hep-th/0002161'>arXiv:hep-th/0002161</a>)</p>
+</li>
+</ul>
+
 <p>Review includes</p>
 
 <ul>
 <li>Yoonbai Kim, Chong Oh Lee, Ilbong Lee, JungJai Lee, <em>Brane World of Warp Geometry: An Introductory Review</em>, J. Kor. Astron. Soc. 37 (2004) 1-14 (<a href='https://arxiv.org/abs/hep-th/0307023'>arXiv:hep-th/0307023</a>)</li>
 </ul>
 
-<p>Discusion of relation to <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> originates around</p>
+<p>Discussion of relation to <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> originates around</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Steven+Giddings'>Steven Giddings</a>, <a class='existingWikiWord' href='/nlab/show/Shamit+Kachru'>Shamit Kachru</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Hierarchies from Fluxes in String Compactifications</em>, Phys. Rev. D66:106006, 2002 (<a href='https://arxiv.org/abs/hep-th/0105097'>arXiv:hep-th/0105097</a>)</li>
+<li id='Witten00'>
+<p><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, from p. 8 on in <em>The Cosmological Constant From The Viewpoint Of String Theory</em>, in <em>Sources and detection of dark matter and dark energy in the universe</em>, Springer 2001. 27-36. (<a href='https://arxiv.org/abs/hep-ph/0002297'>arXiv:hep-ph/0002297</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Steven+Giddings'>Steven Giddings</a>, <a class='existingWikiWord' href='/nlab/show/Shamit+Kachru'>Shamit Kachru</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Hierarchies from Fluxes in String Compactifications</em>, Phys. Rev. D66:106006, 2002 (<a href='https://arxiv.org/abs/hep-th/0105097'>arXiv:hep-th/0105097</a>)</p>
+</li>
 </ul>
 
 <p>Review of the relation to <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>/<a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+models'>intersecting D-brane models</a> includes</p>
@@ -801,14 +820,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on August  3, 2018 at 12:11:48.
+  Last revised on August 20, 2018 at 08:32:36.
   See the <a href="https://ncatlab.org/nlab/history/Randall-Sundrum model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Randall-Sundrum+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Randall-Sundrum+model/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Randall-Sundrum+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Randall-Sundrum+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Randall-Sundrum model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
