--- a/pages/19603.html
+++ b/pages/19603.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -699,9 +699,9 @@ margin-left: 0em;
 
 <li>Localization in Homotopy Type Theory, (<a href='https://arxiv.org/abs/1807.04155'>arXiv:1807.04155</a>)</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em>The James construction and <math class='maruku-mathml' display='inline' id='mathml_b3680d9b8066c3a18a46813835fa3c94b3808534_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory</em>, (<a href='https://arxiv.org/abs/1710.10307'>arXiv:1710.10307</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em>The James construction and <math class='maruku-mathml' display='inline' id='mathml_fba33677f33b611b076f40ca2e5e893e43f20edc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_4(S^3)</annotation></semantics></math> in homotopy type theory</em>, (<a href='https://arxiv.org/abs/1710.10307'>arXiv:1710.10307</a>)</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Dan+Licata'>Dan Licata</a>, <a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em><math class='maruku-mathml' display='inline' id='mathml_b3680d9b8066c3a18a46813835fa3c94b3808534_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(S^n)</annotation></semantics></math> in Homotopy Type Theory</em>, Invited Paper, CPP 2013, <a href='http://dlicata.web.wesleyan.edu/pubs/lb13cpp/lb13cpp.pdf'>PDF</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Dan+Licata'>Dan Licata</a>, <a class='existingWikiWord' href='/nlab/show/Guillaume+Brunerie'>Guillaume Brunerie</a>, <em><math class='maruku-mathml' display='inline' id='mathml_fba33677f33b611b076f40ca2e5e893e43f20edc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(S^n)</annotation></semantics></math> in Homotopy Type Theory</em>, Invited Paper, CPP 2013, <a href='http://dlicata.web.wesleyan.edu/pubs/lb13cpp/lb13cpp.pdf'>PDF</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Ulrik+Buchholtz'>Ulrik Buchholtz</a>, <a class='existingWikiWord' href='/nlab/show/Egbert+Rijke'>Egbert Rijke</a>, <em>The Cayley-Dickson Construction in Homotopy Type Theory</em>, (<a href='https://arxiv.org/abs/1610.01134'>arXiv:1610.01134</a>):</li>
 </ul>
@@ -724,6 +724,8 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Favonia'>Kuen-Bang Hou (Favonia)</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Shulman'>Michael Shulman</a>, <em>The Seifert–van Kampen Theorem in Homotopy Type Theory</em>, 2016, (<a href='https://favonia.org/files/vankampen-csl2016.pdf'>pdf</a>), (<a href='10.4230/LIPIcs.CSL.2016.22'>doi</a>)</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Dan+Licata'>Dan Licata</a> and <a class='existingWikiWord' href='/nlab/show/Eric+Finster'>Eric Finster</a>, <em>Eilenberg-MacLane Spaces in Homotopy Type Theory</em>, LICS 2014, <a href='http://dlicata.web.wesleyan.edu/pubs/lf14em/lf14em.pdf'>PDF</a></li>
+
+<li>Floris van Doorn, Jeremy Avigad, Steve Awodey, Ulrik Buchholtz, Egbert Rijke, and Mike Shulman, <em>Spectral Sequences in Homotopy TypeTheory</em>. Paper forthcoming. 2018. <a href='https://github.com/cmu-phil/Spectral'>github</a>.</li>
 </ul>
 
 <h3 id='modal_homotopy_type_theory'>Modal homotopy type theory</h3>
@@ -743,7 +745,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 20, 2018 at 18:53:32.
+  Last revised on August 20, 2018 at 19:16:14.
   See the <a href="https://ncatlab.org/nlab/history/mathematics presented in homotopy type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
