--- a/pages/445.html
+++ b/pages/445.html
@@ -8,13 +8,14 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
-  
- 
-  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+
+
+  <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
-    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
-      color: #008B26; 
+    h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
+      color: #008B26;
     }
     a:visited.existingWikiWord {
       color: #005c19;
@@ -23,7 +24,7 @@
     
   </style>
   
-  <style type="text/css"><!--/*--><![CDATA[/*><!--*/    
+  <style type="text/css"><!--/*--><![CDATA[/*><!--*/
     .toc ul {margin: 0; padding: 0;}
 .toc ul ul {margin: 0; padding: 0 0 0 10px;}
 .toc li > p {margin: 0}
@@ -608,7 +609,6 @@ margin-left: 0em;
 <ul>
 <li><a href='#InfImageExamples'>Examples</a></li>
 </ul>
-</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 </ul>
 </div>
@@ -881,14 +881,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August  8, 2018 at 09:14:16.
+  Last revised on August 21, 2018 at 19:47:14.
   See the <a href="https://ncatlab.org/nlab/history/image" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/image" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/image/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/image" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/image" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/image" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/image/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/image" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/image" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/image/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
